Strawberry Music Player
=======================
ChangeLog

Unreleased:

    * Fixed search error not shown in Tidal search
    * Added URL handler for Tidal, now retriving URL's when playing instead of when searching
    * Fixed bug in pipeline not setting url
    * Fixed bug setting wrong temporary metadata
    * Removed device module from windows, since it's not implemented for windows

Version 0.3.1:

    * Added new lyrics provider with lyrics from AudD and API Seeds
    * New improved context widget with albums and lyrics
    * Fixed playing and context widget getting stuck in play mode when there was an error
    * Changed icons for artists in collection, tidal and cover manager
    * Removed "search" icon from "Search automatically" checkbox (right click) that looked ugly
    * Removed some unused widgets from the src/widgets directory
    * Fixed initial size of window and side panel
    * Fixed saving window size correctly
    * Added Tidal support
    * Disabled Amazon cover provider because of revoked API key
    * Removed broken xine fader
    * Made chromeprint optional
    * Added missing names to about dialog
    * Made xine enabled only for window debug
    * Removed dead code
    * Added DSF and DSDIFF/DFF support
    * Fixed tagreader crash when saving tags to MP3 files
    * Added support for reading/writing lyrics to tags
    * Fixed saving tags (APE) for WavPack files

Version 0.2.1:

    * Fixed crash with newer Qt
    * Fixed setting output/device for Xine and VLC backend
    * Improved backend settings to better support multiple backends
    * Fixed track slider for Xine, VLC and Phonon
    * Fixed compilation on MacOs
    * Fixed device selection on MacOs
    * Added xine on to windows build

Version 0.1.6:
    * Fixed crash on exit caused by NVIDIA driver
    * Fixed PulseAudio device selection
    * Improvements to device selection

Version 0.1.5:
    * Makefile fixes for building

Version 0.1.4: