@@ -49,7 +49,7 @@ class TidalSettingsPage : public SettingsPage {
   bool eventFilter(QObject *object, QEvent *event);
 
 signals:
-  void Login(const QString &username, const QString &password, const int search_id = 0);
+  void Login(const QString &username, const QString &password);
 
  private slots:
   void LoginClicked();
